updates from last wk

--- a/dg-report-details.html
+++ b/dg-report-details.html
@@ -93,9 +93,15 @@
   <label class="au-control-input__text" for="occurance">Occurance</label>
 </div>
 
+               <div class="au-control-input au-control-input--block">
+  <input class="au-control-input__input" type="radio" name="radio-ex1" id="undeclared" value="">
+  <label class="au-control-input__text" for="undeclared">Undeclared dangerous goods</label>
+</div>
 
-
-
+            <div class="au-control-input au-control-input--block">
+  <input class="au-control-input__input" type="radio" name="radio-ex1" id="misdeclared" value="">
+  <label class="au-control-input__text" for="misdeclared">Misdeclared dangerous goods</label>
+</div>
 
                   </fieldset>
                   </div>
