--- a/incident-details.html
+++ b/incident-details.html
@@ -145,7 +145,16 @@
 							<option value="2">*list of locations to be provided*</option>
                         </select>
                      </div>
-					  
+		<!--	<div> 
+					    <form role="search" aria-label="sitewide" class="au-search">
+      <label for="standard" class="au-search__label">Search this website</label>
+      <input type="search" id="standard" name="standard" class="au-text-input"/>
+							
+      <div class="au-search__btn">
+          <button class="au-btn" type="submit"><span class="au-search__submit-btn-text">Search</span></button>
+      </div>
+  </form>
+			</div> 	-->	  
 					    <div class="au-form-group">
   <h3 class="au-display-sm">Description of the occurance</h3>
   <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the occurance including details of injury, damage etc.</label>
