Updates from mtg with Jabed

--- a/flight-details.html
+++ b/flight-details.html
@@ -7,7 +7,7 @@
       <meta name="viewport" content="initial-scale=1">
       <link rel="stylesheet" href="../mycasa-src-5.0/css/designsystem.min.css">
       <link rel="stylesheet" href="../mycasa-src-5.0/css/casa.css">
-      <script type="text/javascript" src="../mycasa-src-3.0/js/designsystem.min.js"></script>
+      <script type="text/javascript" src="../mycasa-src-5.0/js/designsystem.min.js"></script>
       <script type="text/javascript" src="../mycasa-src-5.0/js/jquery.min.js"></script>
       <script type="text/javascript" src="../mycasa-src-5.0/js/jquery.js"></script>
 	  <script type="text/javascript" src="va.js"></script>
@@ -90,6 +90,7 @@
 <h2>Flight details</h2>
 
            <div class="au-form-group">
+			    <h3 class="au-display-sm">FIREFLY AVIATION PTY LTD <br>ARN: 6543210</h3>
                       <h3 class="au-display-sm">Flight number</h3>
                       <!--<label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please enter the flight number</label>-->
                           <input type="text" class="au-text-input" />
