--- a/dg-report-details.html
+++ b/dg-report-details.html
@@ -73,9 +73,11 @@
  <div class="au-form-group">
                   <fieldset class="au-fieldset">
                       <legend class="au-fieldset__legend">
-                          <h3 class="au-display-sm">This report relates to an</h3>
-                          <span class="au-hint-text">Please select one</span>
+                          <h3 class="au-display-sm">Type of dangerous goods report </h3>
+                          <span class="au-hint-text">Please select the type of dangerous goods report this relates to</span>
                       </legend>
+					  
+					  
 
                                             <div class="au-control-input au-control-input--block">
   <input class="au-control-input__input" type="radio" name="radio-ex1" id="accident" value="">
