--- a/dg-summary.html
+++ b/dg-summary.html
@@ -54,12 +54,12 @@
                <nav class="au-breadcrumbs" aria-label="breadcrumb">
                   <ul class="au-link-list au-link-list--inline">
                      <li><a href="#">myCASA</a></li>
-                     <li>Dangerous goods report</li>
+                     <li>Dangerous goods event notification</li>
                   </ul>
                </nav>
 			 <div class="casa-section">
                <header class="au-header" role="banner">
-                  <h1 class="break desktop au-header-heading">Dangerous goods report</h1>
+                  <h1 class="break desktop au-header-heading">Dangerous goods event notification</h1>
                   <a class="au-direction-link" href="javascript:history.back()">
 					<span class="au-direction-link__arrow au-direction-link__arrow--left" aria-hidden="true"></span>Back
 					</a>
@@ -77,25 +77,30 @@
             </tr>
         </thead>
         <tbody class="au-table__body">
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Report type:</strong></td>
-                <td class="au-table__cell">Incident</td>
-            </tr>
+            
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Operator:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
+                <td class="au-table__cell">FIREFLY AVIATION PTY LTD</td>
+            </tr>
+			<tr class="au-table__row">
+                <td class="au-table__cell"><strong>ARN:</strong></td>
+                <td class="au-table__cell">6543210</td>
+            </tr>
+			<tr class="au-table__row">
+                <td class="au-table__cell"><strong>Report type:</strong></td>
+                <td class="au-table__cell">Accident</td>
             </tr>
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Date of incident:</strong></td>
-                <td class="au-table__cell">16/11/2020</td>
+                <td class="au-table__cell">24/05/2022</td>
             </tr>
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Time of incident:</strong></td>
-                <td class="au-table__cell">16:00</td>
+                <td class="au-table__cell">08:00</td>
             </tr>
             <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Date of flight:</strong></td>
-                <td class="au-table__cell">16/11/2020</td>
+                <td class="au-table__cell"><strong>Location of incident:</strong></td>
+                <td class="au-table__cell">SYD - SYDNEY AIRPORT - YSSY</td>
             </tr>
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Flight number:</strong></td>
