--- a/flight-details.html
+++ b/flight-details.html
@@ -73,12 +73,12 @@
                <nav class="au-breadcrumbs" aria-label="breadcrumb">
                   <ul class="au-link-list au-link-list--inline">
                      <li><a href="dashboard-org.html">myCASA</a></li>
-                      <li>Dangerous goods report</li><li>Flight details</li>
+                      <li>Dangerous goods event notification</li><li>Flight details</li>
                   </ul>
                </nav>
 			 <div class="casa-section">
                <header class="au-header" role="banner">
-                  <h1 class="break desktop au-header-heading">Dangerous goods report</h1>
+                  <h1 class="break desktop au-header-heading">Dangerous goods event notification</h1>
                   <a class="au-direction-link" href="javascript:history.back()">
 					<span class="au-direction-link__arrow au-direction-link__arrow--left" aria-hidden="true"></span>Back
 					</a>
@@ -121,6 +121,9 @@
 -->
 					  <div class="au-form-group">
                         <label class="au-label" for="name">Aircraft registration</label>
+						<span class="au-hint-text">
+                        Please provide the aircraft registration number for domestic this will start with VH
+                        </span>
 					
 				<input class="au-text-input au-text-input--block" name="vh-mark" id="vh-mark" type="text" value="">		
 				</div>
