--- a/incident-details.html
+++ b/incident-details.html
@@ -78,7 +78,7 @@
                </nav>
 			 <div class="casa-section">
                <header class="au-header" role="banner">
-                  <h1 class="break desktop au-header-heading">Dangerous goods report</h1>
+                  <h1 class="break desktop au-header-heading">Dangerous goods event notification</h1>
                   <a class="au-direction-link" href="javascript:history.back()">
 					<span class="au-direction-link__arrow au-direction-link__arrow--left" aria-hidden="true"></span>Back
 					</a>
@@ -136,8 +136,8 @@
                       					 <div class="au-form-group casa-inline-form-group">
                        <fieldset class="au-fieldset">
                             <legend class="au-fieldset__legend">
-                                <h3 class="au-display-sm">Date of occurance</h3>
-                                <span class="au-hint-text">For example, 31 01 2022</span>
+                                <h3 class="au-display-sm">Date of occurrence</h3>
+                                <span class="au-hint-text">The date when the event occurred</span>
                             </legend>
                             <div class="au-form-group casa-inline-form-subgroup">
                                 <label class="au-label" for="dd">Date</label>
@@ -157,7 +157,7 @@
                     </div>
 
 
-
+<!--
 			<div class="au-form-group">
         <fieldset class="au-fieldset">
         <legend class="au-fieldset__legend">
@@ -176,10 +176,11 @@
                           </div>
                         </fieldset>
           	</div>
+-->
 					   <div class="au-form-group">
-                        <label for="location" class="au-label">Location of occurance</label>
+                        <label for="location" class="au-label">Location of occurrence</label>
                         <span class="au-hint-text">
-                        Please select the location of the dangerous goods occurance
+                        Please select the location of the incident
                         </span>
                         <select id="location" class="au-select au-select--block">
                            <option value="1">Please select the location</option>
@@ -198,8 +199,8 @@
   </form>
 			</div> 	-->	  
 					    <div class="au-form-group">
-  <h3 class="au-display-sm">Description of the occurance</h3>
-  <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the occurance including details of injury, damage etc.</label>
+  <h3 class="au-display-sm">Description of the occurrence</h3>
+  <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the incident including details of injury, damage etc.</label>
         <textarea class="au-text-input au-text-input--block" name="textarea" id="textarea">
 
         </textarea>
