--- a/incident-details.html
+++ b/incident-details.html
@@ -180,7 +180,7 @@
 					   <div class="au-form-group">
                         <label for="location" class="au-label">Location of occurrence</label>
                         <span class="au-hint-text">
-                        Please select the location of the incident
+                        Please select the location of the occurrence
                         </span>
                         <select id="location" class="au-select au-select--block">
                            <option value="1">Please select the location</option>
