--- a/dg-summary.html
+++ b/dg-summary.html
@@ -87,122 +87,50 @@
                 <td class="au-table__cell">6543210</td>
             </tr>
 			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>Report type:</strong></td>
+                <td class="au-table__cell"><strong>Event type:</strong></td>
                 <td class="au-table__cell">Accident</td>
             </tr>
             <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Date of incident:</strong></td>
+                <td class="au-table__cell"><strong>Date of event:</strong></td>
                 <td class="au-table__cell">24/05/2022</td>
             </tr>
-            <tr class="au-table__row">
+ <!--          <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Time of incident:</strong></td>
                 <td class="au-table__cell">08:00</td>
             </tr>
+-->
             <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Location of incident:</strong></td>
+                <td class="au-table__cell"><strong>Location of event:</strong></td>
                 <td class="au-table__cell">SYD - SYDNEY AIRPORT - YSSY</td>
+            </tr>
+			<tr class="au-table__row">
+                <td class="au-table__cell"><strong>Description of event:</strong></td>
+                <td class="au-table__cell">A description of event is displayed here.</td>
+            </tr>
+            <tr class="au-table__row">
+                <td class="au-table__cell"><strong>Event detected:</strong></td>
+                <td class="au-table__cell">During screening - checked baggage</td>
+            </tr>
+            <tr class="au-table__row">
+                <td class="au-table__cell"><strong>Type of package:</strong></td>
+                <td class="au-table__cell">Passenger</td>
             </tr>
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Flight number:</strong></td>
-                <td class="au-table__cell">123</td>
-            </tr>
-			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>Departure airport:</strong></td>
-                <td class="au-table__cell">Canberra - CBR</td>
+                <td class="au-table__cell">FA-123</td>
             </tr>
             <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Destination airport:</strong></td>
-                <td class="au-table__cell">20:00</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Aircraft registration:</strong></td>
-                <td class="au-table__cell">VH-ABC</td>
-            </tr>
-            <tr class="au-table__row">
-                      <td class="au-table__cell"><strong>Location of incident:</strong></td>
-                      <td class="au-table__cell">Canberra airport</td>
+                      <td class="au-table__cell"><strong>Aircraft registration:</strong></td>
+                      <td class="au-table__cell">VH-123</td>
                   </tr>
 			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>Origin of goods:</strong></td>
-                <td class="au-table__cell">Canberra</td>
-            </tr>
-
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Description of the incident:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-			  <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Proper shipping name:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>UN or ID number:</strong></td>
-                <td class="au-table__cell">12345</td>
+                <td class="au-table__cell"><strong>Type of flight:</strong></td>
+                <td class="au-table__cell">Domestic</td>
             </tr>
             <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Class/Division:</strong></td>
-                <td class="au-table__cell">unknown</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Subsidiary risk(s):</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>Packing group:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Type of packaging:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Package specification markings:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Number of packages:</strong></td>
-                <td class="au-table__cell">2</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Number of shipments:</strong></td>
-                <td class="au-table__cell">2</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Reference number of Air Waybill:</strong></td>
-                <td class="au-table__cell">54321</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Reference number of courier pouch, mailbag, baggage tag or passenger ticker:</strong></td>
-                <td class="au-table__cell">ABC123</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Name of shipper:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Address of shipper:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Name of consignee:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Address of consignee:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Name of freight forwarder:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Address of freight forwarder:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
-            <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Other relevant information:</strong></td>
-                <td class="au-table__cell">XXXXX</td>
-            </tr>
+                      <td class="au-table__cell"><strong>Aircraft registration:</strong></td>
+                      <td class="au-table__cell">VH-123</td>
+                  </tr>
         </tbody>
     </table>
 </div>
