--- a/incident-details.html
+++ b/incident-details.html
@@ -90,12 +90,12 @@
 <h2>Incident details</h2>
 			  
 					  <div class="au-form-group">
-                        <label for="report type" class="au-label">Type of report </label>
+                        <label for="report type" class="au-label">Event type </label>
                         <span class="au-hint-text">
-                        Please select the type of dangerous goods report this relates to
+                        Please select the type of dangerous goods event this report relates to
                         </span>
                         <select id="report-type" class="au-select au-select--block">
-                           <option value="1">Please select type of report</option>
+                           <option value="1">Please select type of event</option>
 						 <option value="2">Accident</option>
                            <option value="3">Incident</option>
 							<option value="4">Undeclared</option>
@@ -136,7 +136,7 @@
                       					 <div class="au-form-group casa-inline-form-group">
                        <fieldset class="au-fieldset">
                             <legend class="au-fieldset__legend">
-                                <h3 class="au-display-sm">Date of occurrence</h3>
+                                <h3 class="au-display-sm">Date of event</h3>
                                 <span class="au-hint-text">The date when the event occurred</span>
                             </legend>
                             <div class="au-form-group casa-inline-form-subgroup">
@@ -178,9 +178,9 @@
           	</div>
 -->
 					   <div class="au-form-group">
-                        <label for="location" class="au-label">Location of occurrence</label>
+                        <label for="location" class="au-label">Location of event</label>
                         <span class="au-hint-text">
-                        Please select the location of the occurrence
+                        Please select the location of the event
                         </span>
                         <select id="location" class="au-select au-select--block">
                            <option value="1">Please select the location</option>
@@ -199,8 +199,8 @@
   </form>
 			</div> 	-->	  
 					    <div class="au-form-group">
-  <h3 class="au-display-sm">Description of the occurrence</h3>
-  <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the incident including details of injury, damage etc.</label>
+  <h3 class="au-display-sm">Description of the event</h3>
+  <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the event including details of injury, damage etc.</label>
         <textarea class="au-text-input au-text-input--block" name="textarea" id="textarea">
 
         </textarea>
@@ -208,12 +208,12 @@
 
 </div>
 					  <div class="au-form-group">
-                        <label for="incident detected" class="au-label">Incident detected</label>
+                        <label for="incident detected" class="au-label">Event detected</label>
                         <span class="au-hint-text">
-                        Please select at what point the incident was detected
+                        Please select when the event was detected
                         </span>
                         <select id="incident detected" class="au-select au-select--block">
-                           <option value="1">Please select when the incident was detected</option>
+                           <option value="1">Please select when the event was detected</option>
                            <option value="2">During screening - checked baggage</option>
                            <option value="3">During screeening - cargo</option>
                            <option value="4">Pre loading</option>
