--- a/dg-summary.html
+++ b/dg-summary.html
@@ -123,13 +123,13 @@
                       <td class="au-table__cell"><strong>Aircraft registration:</strong></td>
                       <td class="au-table__cell">VH-123</td>
                   </tr>
+			 <tr class="au-table__row">
+                      <td class="au-table__cell"><strong>Type of flight:</strong></td>
+                      <td class="au-table__cell">Domestic</td>
+                  </tr>
 			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>Type of flight:</strong></td>
-                <td class="au-table__cell">Domestic</td>
-            </tr>
-            <tr class="au-table__row">
-                      <td class="au-table__cell"><strong>Aircraft registration:</strong></td>
-                      <td class="au-table__cell">VH-123</td>
+                      <td class="au-table__cell"><strong>ATSB reportable:</strong></td>
+                      <td class="au-table__cell">No</td>
                   </tr>
         </tbody>
     </table>
