--- a/incident-details.html
+++ b/incident-details.html
@@ -92,7 +92,7 @@
 					  <div class="au-form-group">
                         <label for="report type" class="au-label">Event type </label>
                         <span class="au-hint-text">
-                        Please select the type of dangerous goods event this report relates to
+                        Please select the type of dangerous goods event this notification relates to
                         </span>
                         <select id="report-type" class="au-select au-select--block">
                            <option value="1">Please select type of event</option>
