--- a/incident-details.html
+++ b/incident-details.html
@@ -87,7 +87,7 @@
 <div class="row">
                	<div class="col-xs-12 col-md-12 col-lg-6">
                   <div class="au-form-group">
-<h2>Incident details</h2>
+<h2>Event details</h2>
 			  
 					  <div class="au-form-group">
                         <label for="report type" class="au-label">Event type </label>
