--- a/incident-details.html
+++ b/incident-details.html
@@ -92,7 +92,7 @@
 					  <div class="au-form-group">
                         <label class="au-label" for="name">Reference number</label>
 						<span class="au-hint-text">
-                        Please provide your organisations reporting reference number.
+                        Please provide your organisations reporting reference number or unique i.d for this event
                         </span>
 					
 				<input class="au-text-input au-text-input--block" name="vh-mark" id="aircraft-registration" type="text" value="">		
