--- a/incident-details.html
+++ b/incident-details.html
@@ -90,9 +90,9 @@
 <h2>Event details</h2>
 			  
 					  <div class="au-form-group">
-                        <label class="au-label" for="name">Reference number</label>
+                        <label class="au-label" for="name">Event reference number</label>
 						<span class="au-hint-text">
-                        Please provide your organisations reporting reference number or unique i.d for this event
+                        Please provide your organisations reference number or unique i.d for this event
                         </span>
 					
 				<input class="au-text-input au-text-input--block" name="vh-mark" id="aircraft-registration" type="text" value="">		
