--- a/dg-summary.html
+++ b/dg-summary.html
@@ -87,6 +87,10 @@
                 <td class="au-table__cell">6543210</td>
             </tr>
 			<tr class="au-table__row">
+                <td class="au-table__cell"><strong>Event reference number:</strong></td>
+                <td class="au-table__cell">FFA-001-230-4</td>
+            </tr>
+			<tr class="au-table__row">
                 <td class="au-table__cell"><strong>Event type:</strong></td>
                 <td class="au-table__cell">Accident</td>
             </tr>
