--- a/dg-summary.html
+++ b/dg-summary.html
@@ -115,6 +115,10 @@
                 <td class="au-table__cell"><strong>Event detected:</strong></td>
                 <td class="au-table__cell">During screening - checked baggage</td>
             </tr>
+			<tr class="au-table__row">
+                <td class="au-table__cell"><strong>Failures:</strong></td>
+                <td class="au-table__cell">Misloaded <br> Mishandled</td>
+            </tr>
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Type of package:</strong></td>
                 <td class="au-table__cell">Passenger</td>
