--- a/incident-details.html
+++ b/incident-details.html
@@ -226,7 +226,7 @@
 			</div> 	-->	  
 					    <div class="au-form-group">
   <h3 class="au-display-sm">Description of the event</h3>
-  <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the event including details of injury, damage, and the action taken during and since the event</label>
+  <label class="au-label au-hint-text" for="textarea" style="font-weight:normal;">Please provide a description of the event including details of injury, damage, and the action taken</label>
         <textarea class="au-text-input au-text-input--block" name="textarea" id="textarea">
 
         </textarea>
@@ -239,7 +239,7 @@
                         Please select at what stage the event was detected
                         </span>
                         <select id="incident detected" class="au-select au-select--block">
-                           <option value="1">Please select when the event was detected</option>
+                           <option value="1">Please select at what stage the event was detected</option>
                            <option value="2">During screening - checked baggage</option>
                            <option value="3">During screeening - cargo</option>
                            <option value="4">Pre loading</option>
