--- a/flight-details.html
+++ b/flight-details.html
@@ -182,6 +182,13 @@
 </div>
   </fieldset>
                   </div>
+					
+					<div class="au-form-group">
+			<h4>Upload supporting documentation</h4>
+			<br>
+			<button class="au-btn au-btn--secondary" type="button">Choose file</button><br>
+			<span class="form-text">Accepted file types are PDF documents (.pdf) and the following image formats: .jpg, .bmp and .png</span>
+		 </div>
                  
 
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
