--- a/flight-details.html
+++ b/flight-details.html
@@ -184,10 +184,11 @@
                   </div>
 					
 					<div class="au-form-group">
-			<h4>Upload supporting documentation</h4>
-			<br>
+		  <h3 class="au-display-sm">Upload photos and supporting documentation</h3>
+                          <span class="au-hint-text">Accepted file types are .pdf, .jpg, .bmp and .png</span>
+						<br>
 			<button class="au-btn au-btn--secondary" type="button">Choose file</button><br>
-			<span class="form-text">Accepted file types are PDF documents (.pdf) and the following image formats: .jpg, .bmp and .png</span>
+			
 		 </div>
                  
 
