--- a/dg-summary.html
+++ b/dg-summary.html
@@ -139,6 +139,10 @@
                       <td class="au-table__cell"><strong>ATSB reportable:</strong></td>
                       <td class="au-table__cell">No</td>
                   </tr>
+			<tr class="au-table__row">
+                      <td class="au-table__cell"><strong>Attachments:</strong></td>
+                      <td class="au-table__cell">Image1.jpeg</td>
+                  </tr>
         </tbody>
     </table>
 </div>
