--- a/incident-details.html
+++ b/incident-details.html
@@ -266,7 +266,7 @@
 
 </div>
 					  <div class="au-form-group">
-                        <label for="incident detected" class="au-label">Event detected</label>
+                        <label for="incident detected" class="au-label">Event detection</label>
                         <span class="au-hint-text">
                         Please select at what stage the event was detected
                         </span>
