--- a/dg-summary.html
+++ b/dg-summary.html
@@ -98,11 +98,7 @@
                 <td class="au-table__cell"><strong>Date of event:</strong></td>
                 <td class="au-table__cell">24/05/2022</td>
             </tr>
- <!--          <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Time of incident:</strong></td>
-                <td class="au-table__cell">08:00</td>
-            </tr>
--->
+ 
             <tr class="au-table__row">
                 <td class="au-table__cell"><strong>Location of event:</strong></td>
                 <td class="au-table__cell">SYD - SYDNEY AIRPORT - YSSY</td>
@@ -112,11 +108,11 @@
                 <td class="au-table__cell">A description of event is displayed here.</td>
             </tr>
             <tr class="au-table__row">
-                <td class="au-table__cell"><strong>Event detected:</strong></td>
+                <td class="au-table__cell"><strong>Event detection:</strong></td>
                 <td class="au-table__cell">During screening - checked baggage</td>
             </tr>
 			<tr class="au-table__row">
-                <td class="au-table__cell"><strong>Failures:</strong></td>
+                <td class="au-table__cell"><strong>Event failures:</strong></td>
                 <td class="au-table__cell">Misloaded <br> Mishandled</td>
             </tr>
             <tr class="au-table__row">
