checked radio buttons

--- a/reporting-successful.html
+++ b/reporting-successful.html
@@ -65,9 +65,9 @@
 
 
 
-			<p>Thank you Robert </nam>,<br><br>
+			<p>Thank you Robert,<br><br>
 
-Your dangerous good event notification has been submitted to CASA and a receipt has been sent to your organisations email address <strong>administration@fireflyaviationl.com</strong>. You can access your submission under the Submission summary section in myCASA.<br><br>
+Your dangerous good event notification has been submitted to CASA and a receipt has been sent to your organisations email address <strong>administration@fireflyaviation.com</strong>. You can access your submission under the Submission summary section in myCASA.<br><br>
 
 					 <br>
 
