--- a/flight-details.html
+++ b/flight-details.html
@@ -131,7 +131,7 @@
 					
                         <div class="au-control-input au-control-input--block">
                             <input class="au-control-input__input" type="radio" name="assessed-simulator"
-                                       id="assessed-aircraft" value="select-review">
+                                       id="assessed-aircraft" value="select-review" checked>
                                 <label class="au-control-input__text" for="assessed-aircraft">Australian registration</label>
                         </div>
 
@@ -150,7 +150,7 @@
 
 
 
-				<div class="casa-section vh-mark casa-hidden">
+				<div class="casa-section vh-mark">
 					<div class="au-form-group">
                         <label class="au-label" for="name">VH Mark</label>
 
@@ -201,7 +201,7 @@
                       </legend>
 
                                             <div class="au-control-input au-control-input--block">
-  <input class="au-control-input__input" type="radio" name="radio-ex1" id="domestic" value="">
+  <input class="au-control-input__input" type="radio" name="radio-ex1" id="domestic" value="" checked>
   <label class="au-control-input__text" for="domestic">Domestic</label>
 </div>
                       
