Updates made with new data dictionary info

--- a/flight-details.html
+++ b/flight-details.html
@@ -230,13 +230,13 @@
   </fieldset>
                   </div>
 					
-					<div class="au-form-group">
+					<!--<div class="au-form-group">
 		  <h3 class="au-display-sm">Upload photos and supporting documentation</h3>
                           <span class="au-hint-text">Accepted file types are .pdf, .jpg, .bmp and .png</span>
 						<br>
 			<button class="au-btn au-btn--secondary" type="button">Choose file</button><br>
 			
-		 </div>
+		 </div>-->
                  
 
     <script type="text/javascript" src="js/jquery-1.8.2.min.js"></script>
