--- a/dashboard-org.html
+++ b/dashboard-org.html
@@ -146,7 +146,7 @@
                         <h2 class="au-display-lg">Applications and notifications</h2>
                     </div>
 <div class="casa-dashboard-item col-lg-6 col-md-6 col-xs-12">
-                        <h3 class="au-display-sm"><a href="incident-details.html">Dangerous goods event notification</a></h3>
+                        <h3 class="au-display-sm"><a href="notification-type.html">Dangerous goods event notification</a></h3>
 
                         <p>Notify CASA of a dangerous goods event</p>
 
